test/isabelle/negative-tests/module-consecutive.p
module Q1 {
    c: int = 0
}

module Q2 {
    d: int = 1
}